--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
+# .env.development
 PORT=
-DB_URL=mongodb
+DB_URL=mongodb+srv://<username>:<password>@cluster0.m4s9p.mongodb.net/Biblioteca-EP?retryWrites=true&w=majority
