--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # .env.development
 PORT=
-DB_URL=mongodb+srv://<username>:<password>@cluster0.m4s9p.mongodb.net/Biblioteca-EP?retryWrites=true&w=majority
+DB_URL=mongodb+srv://<username>:<password>@cluster0.m4s9p.mongodb.net/<database_name>?retryWrites=true&w=majority
